[package]
name = "entropython"
version = "1.1.0"
authors = ["Enkelmann <nils-edvin.enkelmann@fkie.fraunhofer.de>"]
edition = "2021"
description = "A Python module for efficient calculation of Shannon byte entropy based on Rust."
readme = "README.md"
homepage = "https://github.com/fkie-cad/entropython"
repository =  "https://github.com/fkie-cad/entropython"
license = "MIT"
license-file = "LICENSE"
keywords = ["shannon", "entropy"]

[lib]
name = "libentropython"
path = "rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.2", features = ["extension-module"] }
