[build-system]
requires = [
    "setuptools",
    "setuptools-rust",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "entropython"
version = "1.1.0"
readme = "README.md"
description = "A Python module for efficient calculation of Shannon byte entropy based on Rust."
license = {file = "LICENSE"}
requires-python = ">= 3.8"
keywords = ["entropy"]

[project.urls]
Homepage = "https://github.com/fkie-cad/entropython"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "twine~=5.1.1",
    "build~=1.2.1",
]

[tool.setuptools.packages]
find = { where = ["python"] }

[[tool.setuptools-rust.ext-modules]]
target = "entropython.libentropython"
path = "Cargo.toml"
binding = "PyO3"
